--- a/TPE5-diazpace_molleker_lucero/css/style.css
+++ b/TPE5-diazpace_molleker_lucero/css/style.css
@@ -1780,7 +1780,7 @@ footer{
     li .notificacion{
         margin:-20px 10px;
     }
-    #lista-comentarios{width: 90%;}
+    #lista-comentarios{width: 90%;margin-left: 20px;}
     #lista-comentarios2{width: 80%;margin-left: auto;margin-right: auto;}
     
     .artista{
@@ -1797,6 +1797,7 @@ footer{
         background-size: contain;
         background-repeat: no-repeat;
     }
+    #estrellitas{margin-left: 5px;}
 }
 
 
